fixed and aligned the icon imgs with the link in .item css

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ a {
 }
 .item {
   margin-bottom: 20px;
+  display:flex;
+  align-items: center;
 }
 .thumbnail {
   width: 48px;
